Refactor /souls back command messages and update localization in config